--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -1,1 +1,17 @@
-%p= link_to 'Ask a question', new_question_path
+%h3 Questions
+
+%ul.mdl-list
+  - @questions.each do |q|
+    %li.mdl-list__item.mdl-list__item--two-line
+      %span.mdl-list__item-primary-content
+        %i.material-icons.mdl-list__item-avatar person
+        %span= q.title
+        %span.mdl-list__item-sub-title= q.body
+
+.mdl-grid
+  .mdl-layout-spacer
+  %div
+    %p= "Count: #{@questions.count}"
+    = link_to new_question_path, { tag: 'button', id: 'add-question', class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored' } do
+      %i.material-icons add
+    .mdl-tooltip{'data-mdl-for' => 'add-question'} Add new question
