--- a/app/views/questions/show.html.haml
+++ b/app/views/questions/show.html.haml
@@ -3,7 +3,7 @@
 %h3= @question.title
 %p= @question.body
 
-- if @question.user == current_user
+- if @question.user_id == current_user.id
   = link_to 'Delete question', question_path(@question), method: :delete
 
 - if @answers.present?
@@ -13,7 +13,7 @@
         %span.mdl-list__item-primary-content
           %i.material-icons.mdl-list__item-avatar person
           %span.mdl-list__item-sub-title= answer.body
-        - if answer.user == current_user
+        - if answer.user_id == current_user.id
           %span.mdl-list__item-secondary-content
             %span.mdl-list__item-secondary-info Delete
             = link_to answer_path(answer), class: 'mdl-list__item-secondary-action', method: :delete do
